# storm-engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODEOWNERS  CONTRIBUTING.md  DRIVE_V2.sln  DRIVE_V3.sln  DRIVE_V4.sln  GameUtils.cpp  IslandED.h  README.md  Setup.cpp  Setup.h  Setup.rc  SetupDlg.cpp  SetupDlg.h  StdAfx.cpp  StdAfx.h  _erase.bat  conanfile.py  conanfile.txt  gen-sln.bat  gen-vs-solution-x64.bat  gen-vs-solution-x86.bat  gen-vs-solution.bat  index.md  resource.h  site-map.md
src/: CMakeLists.txt
src/Animals/: Animals.cpp  Animals.h  Animals.vcproj  Animals.vcxproj  Animals.vcxproj.filters  AnimalsDefines.h  CMakeLists.txt  TButterflies.cpp  TButterflies.h  TButterfly.cpp  TButterfly.h  TDynamicObject.h  TDynamicSystem.h  TFishSchools.cpp  TIVBufferManager.h  TSeagulls.h  TSharks.cpp  TSharks.h  sharks_ps.cpp
src/Animation/: ActionInfo.h  ActionPlayerImp.h  Animation.vcproj  Animation.vcxproj  AnimationServiceImp.h  AnimationTimerImp.h  Bone.cpp  Bone.h  CMakeLists.txt
src/Artifact/: Artifact.h  Artifact.vcxproj.filters  CMakeLists.txt  bsps.h
src/BackgroundShipTask/: BackgroundDate.cpp  BackgroundShipTask.vcxproj  BackgroundShipTask.vcxproj.filters  CMakeLists.txt
src/Ballsplash/: BallSplash.cpp  BallSplash.h  BallSplash.vcxproj  CMakeLists.txt
src/Battle_interface/: ActivePerkShower.cpp  ActivePerkShower.h  CMakeLists.txt  IBoardingStatus.cpp  IBoardingStatus.h  LogAndAction.cpp  LogAndAction.h  ShipPointer.cpp  ShipPointer.h  Utils.cpp  Utils.h  battle_command.h  battle_navigator.h  battle_shipcommand.cpp  battle_shipsign.cpp  battle_sign.h  ibattle.h  ibattle.vcxproj  ibattle.vcxproj.filters  island_descr.h  ships_list.cpp  spyglass.cpp  spyglass.h
src/Blot/: Blot.vcproj  Blots.cpp  Blots.h  CMakeLists.txt
src/CameraDialog/: CMakeLists.txt  CameraDialog.h  CameraDialog.vcproj  CameraDialog.vcxproj.filters
src/Collide/: CMakeLists.txt  COLLIDE.vcproj  coll.cpp  vcollide.h
src/Common_h/: CMakeLists.txt  Cvector.h  Entity_x.h  Island_Base.h  Matrix.h  Net.h  VideoTexture.h  Weather_Base.h  achievements.h  controls.h  defines.h  dx8render.h  entity.h  entity_state.h  geometry.h  inlines.h  input.h  key_codes.h  light.h  math3D.h  messages.h  model.h  object.h  sail_base.h  sail_msg.h  script_libriary.h  stringService.h  triangle.h  vapi.h  vblast.h  vcube_service.h  vevent.h  vmapi.h  vmodule_api.h  vparticle_system.h  vparticles_system.h  vsail.h
src/DX8RENDER/: CMakeLists.txt  DX8RENDER.vcproj  DX8RENDER.vcxproj.filters  Screenshot.cpp  Technique.cpp  sdevice.cpp  sdevice.h
src/Dialog/: CMakeLists.txt  DIALOG.vcxproj.filters  dialog.cpp  dialog.h
src/ENGINE/: CMakeLists.txt  Core.cpp  Core.h  ENGINE.vcxproj  Main.cpp  achievements.cpp  common_h.h  compiler.cpp  compiler.h  control_stack.h  data.h  entity_state_R.cpp  expression.cpp  file_service.h  hashhold.h  idwalker.h  input.h  layer_service.h  mem_utils.cpp  memory_service.h  message_script.h  modules_table.h  options  program.h  s_dbg_sourceview.cpp  s_dbg_watcherlist.h  s_deftab.h  s_eventtab.h  s_functab.h  s_postevents.h  s_stack.cpp  s_stack.h  s_tstack.cpp  s_tstack.h  s_vartab.cpp  services_list.h  stack.h  string_codec.h  strings_list.h  system_api.cpp  (+4 more)
src/Gameutils/: CMakeLists.txt  GAMEUTILS.vcproj  GAMEUTILS.vcxproj.filters  IslandED.cpp
src/Geometry/: CMakeLists.txt  GEOMETRY.vcproj  GEOMETRY.vcxproj  GEOMETRY.vcxproj.filters  Rdf.h  geometry.cpp
src/InterfaceEditor/: CMakeLists.txt  InterfaceEditor.h  InterfaceEditor.vcproj  InterfaceEditor.vcxproj
src/Island/: CMakeLists.txt  Foam.cpp  Foam.h  ISLAND.cpp  ISLAND.h  ISLAND.vcxproj.filters  MapZipper.cpp
src/Lighter/: CMakeLists.txt  LTypes.h  LightProcessor.cpp  LightProcessor.h  Lighter.cpp  Lighter.vcxproj  LighterMain.cpp  Lights.cpp  OctTree.h  Window.cpp
src/Location/: CMakeLists.txt  CameraFollow.cpp  CameraFollow.h  Character.cpp  Character.h  CharacterAnimationKipper.cpp  CharacterAnimationKipper.h  Fader.cpp  Fader.h  Grass.cpp  Lights.cpp  Lights.h  Lizards.h  LocCrabs.h  LocEagle.cpp  LocEagle.h  LocLife.cpp  LocRats.h  Location.h  Location.vcproj  Location.vcxproj.filters  LocationCamera.cpp  LocationCamera.h  LocationEffects.cpp  LocationEffects.h  LocationMain.cpp  LocationScriptLib.h  LocatorArray.h  ModelArray.cpp  ModelArray.h  ModelRealizer.h  NPCharacter.cpp  PathTracks.h  WideScreen.h  ptc.h
src/Locator/: CMakeLists.txt  locator.cpp  locator.h
src/MLeaks/: CMakeLists.txt  MLeaks.cpp  MLeaks.vcproj  MLeaks.vcxproj.filters  MLeaksDlg.h  StdAfx.cpp
src/Mast/: CMakeLists.txt  mast.cpp  mast.h  mast.vcproj
src/MasterServer/: Account.cpp  CMakeLists.txt  Client.cpp  Client.h  MasterServer.cpp  MasterServer.h  MasterServer.vcxproj.filters  Server.cpp  Server.h
src/Model/: CMakeLists.txt  MODEL.vcproj  MODEL.vcxproj  MODEL.vcxproj.filters  model.cpp  modelr.h
src/NET/: CMakeLists.txt  CRC16.h  CRC32.cpp  Client.cpp  Client.h  NET.vcxproj.filters  NetMessage.h  Server.cpp  Server.h
src/Particles/: CMakeLists.txt  PARTICLES.vcproj  PARTICLES.vcxproj  dynamix.h  particles_ms.h  particles_system.cpp  particles_system.h
src/Pc_controls/: CMakeLists.txt  PC_CONTROLS.vcproj  device_controls.h  di_gamepad.h  di_keyboard.cpp  di_keyboard.h  di_mouse.cpp  di_mouse.h  pc_controls.cpp  pc_controls.h
src/Pcs_controls/: CMakeLists.txt  KeyBuffer.cpp  KeyBuffer.h  PCS_CONTROLS.vcproj  PCS_CONTROLS.vcxproj  PCS_CONTROLS.vcxproj.filters
src/Peoples_on_ship/: CMakeLists.txt  PEOPLES_ON_SHIP.cpp  PEOPLES_ON_SHIP.vcproj  PEOPLES_ON_SHIP.vcxproj  PEOPLES_ON_SHIP.vcxproj.filters
src/Rigging/: CMakeLists.txt  Flag.cpp  Rope.cpp  Rope.h  SAILONE.cpp  Vant.cpp  Vant.h  sail.cpp  sail.h  script_func.cpp  script_func.h
src/SCRIPT_LIBRIARY/: CMakeLists.txt  SCRIPT_LIBRIARY.vcproj  SCRIPT_LIBRIARY.vcxproj  script_libriary_test.h
src/Sailors/: CMakeLists.txt  Sailors.cpp  Sailors.h  Sailors.vcproj  Sailors.vcxproj  Sailors.vcxproj.filters  SailorsEditor.cpp  SailorsEditor.h  SailorsMenu.cpp  SailorsMenu.h  SailorsWayPoints.h
(+6812 files in other folders)
