cmake_minimum_required(VERSION 3.18)

project(common_h)

add_library(common_h MODULE 
	math3d/Box.h
	math3d/Capsule.h
	math3d/Color.h
	math3d/Line.h
	math3d/Matrix.h
	math3d/Plane.h
	math3d/Quaternion.h
	math3d/Sphere.h
	math3d/Triangle.h
	math3d/Vector.h
	math3d/Vector4.h

	particles/gmx_QSort.h
	particles/iparticlemanager.h
	particles/iparticlesservice.h
	particles/iparticlesystem.h

	Sd2_h/AIMessages.h
	Sd2_h/CannonTrace.h
	Sd2_h/SaveLoad.h
	Sd2_h/VAI_ObjBase.h

	templates/Array.h
	templates/HTable.h
	templates/dsmooth.h
	templates/dtimer.h
	templates/map.h
	templates/stack.h
	templates/string.h
	templates/tcommon.h

	Animation.h
	CVector4.h
	Character.h
	Cvector.h
	Entity_x.h
	Exs.h
	Intel.h
	Island_Base.h
	Matrix.h
	Net.h
	ShipLights.h
	VideoTexture.h
	Weather_Base.h
	achievements.h
	attributes.h
	collide.h
	controls.h
	d_types.h
	defines.h
	dx8render.h
	entity.h
	entity_id.h
	entity_state.h
	geometry.h
	geos.h
	inlines.h
	input.h
	key_codes.h
	light.h
	mast_msg.h
	math3D.h
	memop.h
	message.h
	messages.h
	model.h
	object.h
	particles.h
	rands.cpp
	rands.h
	s_import_func.h
	sail_base.h
	sail_msg.h
	script_libriary.h
	sea_base.h
	service.h
	ship_base.h
	ship_msg.h
	stringService.h
	templates.h
	tga.h
	triangle.h
	types3d.h
	v_s_stack.h
	v_udp_transport.h
	vapi.h
	vblast.h
	vcontrols.h
	vcube_service.h
	vdata.h
	vevent.h
	vfile_service.h
	vidwalker.h
	vmapi.h
	vmemory_service.h
	vmodule_api.h
	vparticle_system.h
	vparticles_system.h
	vsail.h
	vship.h
	vstring_codec.h
	vsystem_api.h
)
